tests/ui/borrowck/async-reference-generality.stderr
error[E0308]: mismatched types
  --> $DIR/async-reference-generality.rs:23:5
   |
LL | /     async {
LL | |         let _x = Struct::<Empty<&'static ()>, _>(PhantomData);
LL | |         async {}.await;
LL | |     }
   | |_____^ one type is more general than the other
   |
   = note: expected reference `&()`
              found reference `&()`

error[E0308]: mismatched types
  --> $DIR/async-reference-generality.rs:23:5
   |
LL | /     async {
LL | |         let _x = Struct::<Empty<&'static ()>, _>(PhantomData);
LL | |         async {}.await;
LL | |     }
   | |_____^ one type is more general than the other
   |
   = note: expected reference `&()`
              found reference `&()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
